--- a/.gitignore
+++ b/.gitignore
@@ -32,4 +32,30 @@ report.[0-9]_.[0-9]_.[0-9]_.[0-9]_.json
 
 # Finder (MacOS) folder config
 .DS_Store
-watchalong.sqlite
+
+watchalong.db
+watchalong
+*.sqlite
+# Binaries for programs and plugins
+
+*.exe
+
+*.exe~
+
+*.dll
+
+*.so
+
+*.dylib
+
+# Test binary, built with `go test -c`
+
+*.test
+
+# Output of the go coverage tool, specifically when used with LiteIDE
+
+*.out
+
+# Dependency directories (remove the comment below to include it)
+
+# vendor/
